--- a/package.json
+++ b/package.json
@@ -3,20 +3,21 @@
   "type": "module",
   "version": "0.0.1",
   "scripts": {
-    "dev": "npm run compile:css && npm run watch:css & astro dev",
+    "dev": "npm run compile:css && astro dev",
     "start": "astro dev",
     "build": "npm run compile:css && astro check && astro build",
     "preview": "astro preview",
     "astro": "astro",
-    "compile:css": "sass public/stylesheets/builder.scss public/stylesheets/styles.css",
-    "watch:css": "sass --watch public/stylesheets/builder.scss public/stylesheets/styles.css"
+    "compile:css": "sass public/stylesheets/builder.scss public/stylesheets/styles.css"
   },
   "dependencies": {
+    "@astrojs/cloudflare": "^12.6.10",
     "astro": "^5.14.4",
     "sass": "^1.89.0"
   },
   "devDependencies": {
     "@astrojs/check": "^0.9.4",
-    "typescript": "^5.6.3"
+    "typescript": "^5.6.3",
+    "wrangler": "^4.42.2"
   }
 }
